--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
 
 <div class="card" id="mainCard">
   <h1>Will you be my Galentine? 💖</h1>
-  <p>Galentine’s Day | Feb 13 | 8:00 PM</p>
   <button class="yes" onclick="sayYes()">YES 💕</button>
   <button class="no" onclick="showMessage()">NO 😶</button>
 </div>
@@ -108,6 +107,7 @@
   <h1>Yaayyyy Bestie! ✨</h1>
   <h1>Galentine date confirmed 💄🍰</h1>
   <img src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" width="200">
+  <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdXFlc2N2dTEzdm5pMWVhdmRibXMwZXVvbmFsZjRydnNqNGwxaWpnYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PJgv9nwSaugN03cM0s/giphy.gif" width="200">
 </div>
 
 <script>
