--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
 
 <audio id="bgMusic" loop>
-  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
+  <source src="https://www.bensound.com/royalty-free-music/track/good-mood-funny-catchy" type="audio/mpeg">
 </audio>
 
 <div class="card" id="mainCard">
