--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 <audio id="bgMusic" loop>
   <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
 </audio>
-
+  
 <!-- Uh oh sound -->
 <audio id="uhOhSound">
-  <source src="https://www.myinstants.com/media/sounds/cartoon-uh-oh.mp3" type="audio/mpeg">
+  <source src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg" type="audio/ogg">
 </audio>
 
 <div class="card" id="mainCard">
