--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Galentine 💖</title>
@@ -57,6 +59,7 @@
     }
 
     .popup {
+      font-family: "Poppins", sans-serif; /* new bold font */
       position: fixed;
       bottom: 30px; /* higher than before */
       background: #ffeff7;
