--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@
 <body>
 
 <audio id="bgMusic" loop>
-  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
+<source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_3f3b2f.mp3?filename=cheerful-comedy-16337.mp3" type="audio/mpeg">
 </audio>
+
+<!-- <audio id="bgMusic" loop>
+  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
+</audio> --> 
   
 <!-- Uh oh sound -->
 <audio id="uhOhSound">
